# s3a

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  CompDisplayFilter.py  Dockerfile  LICENSE  MainWindow.py  README.md  __init__.py  __main__.py  alt-requirements.txt  component.py  constants.py  constparams.py  dataModelComponent.py  dataTable.py  graphicseval.py  main.py  newCompMgr.py  processing.py  pyproject.toml  pytest.ini  requirements-pinned.txt  requirements-test.txt  requirements-unreleased.txt  requirements.txt  setup.cfg  setup.py  sonar-project.properties  tablemodel.py
.github/workflows/: pipeline.yaml  pytest.yaml
ABGraphics/: FocusedComp.py  clickables.py  dataTable.py  imageareas.py  parameditors.py  regions.py  table.py  tableview.py  utils.py
Annotator/: Annotator.py  CompDisplayFilter.py  __init__.py  __main__.py  constants.py  exceptions.py  generalutils.py  interfaceimpls.py  interfaces.py  params.py  processing.py  processingutils.py  tablemodel.py  tableviewproxy.py
Annotator/ABGraphics/: clickables.py  graphicsutils.py  imageareas.py  parameditors.py  regions.py  tableview.py  utils.py
Annotator/FRGraphics/: annotator_ui.py  clickables.py  drawopts.py  graphicsutils.py  imageareas.py  parameditors.py  regions.py  rois.py  tableview.py
Annotator/Icons/: foregroundBackgroundPics.pptx
Annotator/frgraphics/: drawopts.py  imageareas.py  regions.py  rois.py
Annotator/projectvars/: constants.py
Annotator/structures/: params.py  vertices.py
Python/: FocusedComp.py  MainWindow.py  SchemeEditor.py  __main__.py  component.py  constants.py  graphicseval.py  graphicshelpers.py  main_ui.py  processing.py
Python/ABGraphics/: CompTable.py  FocusedComp.py  clickables.py  parameditors.py  regions.py  utils.py
Python/Playground/: FocusedCompWidget.py  testMplWithUi.py  testWinBehavior.py
Python/Tests/: regions.py
Tests/: regions.py  test_graphics.py  test_performance.py
apptests/: appsetup.py  conftest.py  helperclasses.py  test_actionstack.py  test_editableimg.py  test_fielddelegates.py  test_focusedimg.py  test_misc.py  test_params.py  test_pipeline.py  test_procimpls.py  test_project.py  test_quickloader.py  test_rois.py  test_s3app.py  test_tabledata.py  test_tableexport.py  test_tablemodel.py  test_tblviewproxy.py  test_threading.py  test_usemetrics.py  test_vertsplugin.py  testingconsts.py
apptests/files/: sample.geojson  sample.superannotate.json  sample.vgg.csv  sample_plg.py  simplify_verts.csv  test_fielddelegates.py
cdef/: MainWindow.py  __init__.py  __main__.py  actionstack.py  cdefapp.py  generalutils.py  interfaceimpls.py  interfaceimpls_new.py  interfaces.py  processingimpls.py  processingutils.py  procwrapper.py  tablecfg.yml  tablemodel.py  tableviewproxy.py  undo.py
cdef/frgraphics/: annotator_ui.py  clickables.py  drawopts.py  graphicsutils.py  imageareas.py  parameditors.py  regions.py  rois.py  tableview.py
cdef/projectvars/: constants.py  enums.py
cdef/structures/: __init__.py  exceptions.py  params.py  tabledata.py  typeoverloads.py  vertices.py
s3a/: __init__.py  __main__.py  __version__.py  _io.py  actionstack.py  constants.py  generalutils.py  graphicsutils.py  io.py  logger.py  plugins.py  processingimpls.py  procwrapper.py  projectcfg.yml  s3app.py  shared.py  shims.py  tablecfg.yml  tablemodel.py  tableviewproxy.py
s3a/_io/: componentio.py  helpers.py
s3a/cfg/: imageproc.yml  multipred.yml  projectcfg.yml
s3a/compio/: __init__.py  base.py  componentio.py  converters.py  exporters.py  helpers.py  importers.py
s3a/config/: imageproc.yml  multipred.yml  projectcfg.yml
s3a/controls/: __init__.py  drawctrl.py  tableviewproxy.py
s3a/frgraphics/: annotator_ui.py  clickables.py  drawopts.py  graphicsutils.py  imageareas.py  regions.py  rois.py  tableview.py
s3a/icons/: foregroundBackgroundPics.pptx
s3a/models/: __init__.py  actionstack.py  editorbase.py  s3abase.py  tablemodel.py
s3a/parameditors/: __init__.py  algcollection.py  (+10 more)
scripts/: build_nix.sh  build_win.sh  local_build_nix.sh  local_build_win.sh
tests/: appsetup.py  conftest.py  test_actionstack.py  test_cdefapp.py  test_focusedimg.py  test_tableexport.py  test_tablemodel.py  test_undo.py
(+80 files in other folders)
